--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@ body {
   </svg>
 </div>
 <div class='augurio'>
-  宝贝，祝你圣诞节快乐！！！</div><br>
+  智文IT在这里祝你圣诞节快乐！！！</div><br>
 <div class='mask'>冰清梦，远了深秋；驯鹿踏歌来，近了圣诞。霓虹闪烁处，轻风送问候，真挚情谊暖心头，弹指一瞬欲何求，唯愿你平安夜与快乐相守，幸福无尽头！
 </div>
 
